--- a/index.html
+++ b/index.html
@@ -11,7 +11,32 @@
 </head>
 
 <body>
+    <header>
+        <img class="photo avatar" src="./assets/img/photo.jpg" alt="profile photo">
+        <h1 class="name">Anna Borkovskaya</h1>
+        <section class="contacts">
+            <div>
+                <div class="rowPhone">
+                    <img src="./assets/img/phone@1X.png" alt="phone">
+                    <a href="tel:+375292822381"> +375 (29) 282 23 81 </a>
+                </div>
+            </div>
+            <div class="messengers-cell row">
+                <a href="#">
+                    <img src="./assets/img/Facebook@1X.png" alt="Facebook">
+                </a>
+                <a href="mailto:annaborkovskaja@gmail.com">
+                    <img src="./assets/img/Google@1X.png" alt="Google">
+                </a>
+                <a href="#">
+                    <img src="./assets/img/Linkedin@1X.png" alt="Linkedin">
+                </a>
+            </div>
+        </section>
 
+    </header>
+
+   
 
 </body>
 
