feat:added summary and skills sections

--- a/index.html
+++ b/index.html
@@ -36,7 +36,41 @@
 
     </header>
 
-   
+    <div class="content">
+        <section class="summary row">
+            <div class="summaryTitle">
+                <h2>Summary</h2>
+
+            </div>
+            <div class="summaryText">
+                <p>Имею хорошие коммуникативные способности. Добросовестная, организованная. Готовность к обучению и
+                    развитию.
+                    Предприимчивая, инициативная.
+                    Вежливая, честная, тактичная.</p>
+            </div>
+
+        </section>
+
+        <section class="row">
+            <div class="summaryTitle">
+                <h2>Skills</h2>
+
+            </div>
+            <div class="skillsText">
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JS</li>
+                    <li>основы Git</li>
+                    <li>знание SOLID принципов</li>
+                    <li>знание методологии scrum</li>
+                </ul>
+            </div>
+
+        </section>
+
+        
+    </div>
 
 </body>
 
