feat:added Experience, Education, English-level sections

--- a/index.html
+++ b/index.html
@@ -69,7 +69,46 @@
 
         </section>
 
-        
+        <section class="row">
+            <div class="summaryTitle">
+                <h2>Experience</h2>
+
+            </div>
+            <div class="skillsText">
+                <ul>
+                    <li>Написание лабораторных работ по C++</li>
+                    <li>Вёрстка страниц с использованием HTML и CSS</li>
+                    <li>Выполнение заданий на JS</li>
+                    <li>Прохождение курсов на HTML Academy и Codecademy</li>
+                </ul>
+            </div>
+
+        </section>
+        <section class="row">
+            <div class="summaryTitle">
+                <h2>Education</h2>
+
+            </div>
+            <div class="skillsText">
+                <ul>
+                    <li>БГУИР, факультет компьютерного проектирования (ФКП)</li>
+                    <li>Прохождение курсов на HTML Academy и Codecademy</li>
+                    <li>Прохождение курсов по английскому языку (офлайн)</li>
+                </ul>
+            </div>
+
+        </section>
+
+        <section class="row">
+            <div class="summaryTitle">
+                <h2>English-level</h2>
+
+            </div>
+            <div class="skillsText">
+                <p>A2 - 1год курсов</p>
+            </div>
+
+        </section>
     </div>
 
 </body>
